--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-i18next": "^12.1.5",
     "react-icons": "^4.8.0",
     "react-pdf": "^6.2.2",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
